[gd_scene load_steps=12 format=2]

[ext_resource path="res://mo/Video/streamvideo-8.ogv" type="VideoStream" id=1]
[ext_resource path="res://mo/Shape/shape1.svg" type="Texture" id=2]
[ext_resource path="res://mo/Shape/shape14.svg" type="Texture" id=3]
[ext_resource path="res://mo/Font/ArialNova.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://mo/Video/streamvideo-11.ogv" type="VideoStream" id=5]
[ext_resource path="res://mo/Video/streamvideo-7.ogv" type="VideoStream" id=6]
[ext_resource path="res://VideoPlayer.gd" type="Script" id=7]
[ext_resource path="res://mo/Shape/shape6.svg" type="Texture" id=8]
[ext_resource path="res://mo/Image/image 4.jpg" type="Texture" id=9]
[ext_resource path="res://mo/UIButtons/ButtonUIpanel.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="TopBox" type="Sprite" parent="."]
position = Vector2( 400.046, 65 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="TopBox"]
margin_left = -240.046
margin_top = -10.0
margin_right = 257.954
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Šis trimatės animacijos objektas padeda geriau suprasti dujų savybes. "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoUI" type="Control" parent="."]
margin_left = 150.0
margin_top = 100.0
margin_right = 635.0
margin_bottom = 487.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Video1" type="VideoPlayer" parent="VideoUI"]
visible = false
margin_right = 480.0
margin_bottom = 384.0
stream = ExtResource( 6 )
expand = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Video2" type="VideoPlayer" parent="VideoUI"]
visible = false
margin_right = 480.0
margin_bottom = 384.0
stream = ExtResource( 1 )
expand = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Video3" type="VideoPlayer" parent="VideoUI"]
visible = false
margin_right = 480.0
margin_bottom = 384.0
stream = ExtResource( 5 )
expand = false

[node name="StartImage" type="Sprite" parent="VideoUI"]
texture = ExtResource( 9 )
centered = false

[node name="VideoFrame" type="Sprite" parent="VideoUI"]
texture = ExtResource( 8 )
centered = false

[node name="ButtonUIpanel" parent="." instance=ExtResource( 10 )]

[connection signal="finished" from="VideoUI/Video1" to="VideoUI" method="_on_Video1_finished"]
[connection signal="finished" from="VideoUI/Video2" to="VideoUI" method="_on_Video2_finished"]
[connection signal="finished" from="VideoUI/Video3" to="VideoUI" method="_on_Video3_finished"]
[connection signal="scene_changed" from="ButtonUIpanel" to="VideoUI" method="_on_ButtonUIpanel_scene_changed"]
